<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>

    <string name="logo_movie_catalogue">Logo Movie Catalogue</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="icon_runtime">Icon Runtime</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="status">Status</string>
    <string name="synopsis">Synopsis</string>
    <string name="language">Language</string>
    <string name="release">Release</string>
    <string name="season">Season</string>

    <string name="movie_runtime">%dh %dm</string>

    <string name="error_network">Kamu sedang offline!</string>
    <string name="try_again">Coba lagi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">Logo Description</string>
    <string name="dummy_search">The Simpsons</string>
    <string name="what_s_popular">What\'s Popular</string>
    <string name="trending">Trending</string>
    <string name="free_to_watch">Free To Watch</string>
    <string name="cast">Top Billed Cast</string>
    <string name="photo_cast">Photo Cast</string>
    <string name="genre">Genre</string>
    <string name="movie_recommendation">Movie Recommendation</string>
    <string name="tv_show_recommendation">Recommendation</string>
    <string name="tv_show_poster">Tv Show Poster</string>
    <string name="favorite">Favorite</string>
    <string name="photo_favorite">Photo favorite</string>
</resources>