<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.movie.MovieDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Surface"
        android:background="?attr/colorSurface"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Movie Detail" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/movie_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="28dp"
                    app:cardCornerRadius="28dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:background="@color/gray_700"
                        android:contentDescription="@string/movie_poster" />
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_tv_show_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="28dp"
                            android:layout_marginVertical="8dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_status"
                                android:contentDescription="@string/icon_runtime" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/status"
                                android:textAlignment="center"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                            <TextView
                                android:id="@+id/tv_movie_status"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/text_title"
                                tools:text="Release" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_season_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintBottom_toTopOf="@+id/cv_tv_show_rating"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cv_tv_show_status">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="28dp"
                            android:layout_marginVertical="8dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_runtime"
                                android:contentDescription="@string/icon_runtime" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/duration"
                                android:textAlignment="center"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                            <TextView
                                android:id="@+id/tv_movie_runtime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/text_title"
                                tools:text="1h 10m" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_tv_show_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="28dp"
                            android:layout_marginVertical="8dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_rating"
                                android:contentDescription="@string/icon_runtime" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/rating"
                                android:textAlignment="center"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                            <TextView
                                android:id="@+id/tv_movie_rating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/text_title"
                                tools:text="8.5/10" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_title"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                tools:text="The Last Duel" />

            <TextView
                android:id="@+id/tv_movie_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/text_subtitle"
                tools:text="You can't outrun your destiny." />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/movie_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/release" />

            <TextView
                android:id="@+id/tv_movie_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/text_title"
                tools:text="2021-09-01" />

            <TextView
                android:id="@+id/movie_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/language" />

            <TextView
                android:id="@+id/tv_movie_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/text_title"
                tools:text="en" />

            <TextView
                android:id="@+id/movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/synopsis" />

            <TextView
                android:id="@+id/tv_movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/text_title"
                tools:text="King Charles VI declares that Knight Jean de Carrouges settle his dispute with his squire, Jacques Le Gris, by challenging him to a duel." />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>